welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:24: error: ';' expected but '=' found.
    t[i]=t[i-1];
        ^Array1:25: error: identifier expected but integer literal found.
    t[i-1]=x;
        ^Array1:25: error: ']' expected but ';' found.
    t[i-1]=x;
            ^Array1:27: error: identifier expected but integer literal found.
  var x = t[5]
            ^Array1:28: error: ']' expected but ';' found.
  t[0]=t[5]
^Array1:28: error: identifier expected but integer literal found.
  t[0]=t[5]
    ^Array1:29: error: ']' expected but ';' found.
  t[5]=x
^Array1:29: error: identifier expected but integer literal found.
  t[5]=x
    ^Array1:30: error: ']' expected but '}' found.
}
^